--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" data-id="123" data-context="A doctor appointment" data-intents="Get estimated duration | Get estimated duration" data-icons="phone | map" data-instructions="Do somthing"></div>
+    <div id="root" data-id="123" data-context="A doctor appointment" data-intents="Get estimated duration | Get estimated arrival" data-icons="phone | map" data-instructions="Do somthing" data-word="if"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
