--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
 
   <div id="root" data-id="123" data-context="A doctor appointment"
     data-intents="Get estimated duration | Get estimated arrival" data-icons="phone | map"
-    data-instructions="Do somthing" data-word="if"></div>
+    data-instructions="Do somthing" data-word="if" data-max-length-per-intent="40"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
