--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
   </crowd-form>
 
   <div id="root" data-id="123" data-context="A doctor appointment"
-    data-intents="Get estimated duration | Get estimated arrival" data-icons="phone | map"
+    data-intents="Inquire on the duration to travel to somewhere | Delete something on your calendar" data-icons="phone | map"
     data-instructions="Do somthing" data-word="if" data-max-length-per-intent="40"></div>
   <!--
       This HTML file is a template.
