--- a/public/index.html
+++ b/public/index.html
@@ -40,8 +40,8 @@
   </crowd-form>
 
   <div id="root" data-id="123" data-context="A doctor appointment"
-    data-intents="Inquire on the duration to travel to somewhere | Delete something on your calendar" data-icons="phone | map"
-    data-instructions="Do somthing" data-word="if" data-max-length-per-intent="40"></div>
+    data-intents="Delete something on your calendar | Inquire on the duration to travel to somewhere" data-icons="calendar | map"
+    data-instructions="Do somthing" data-link-word="if" data-max-length-per-intent="60"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
