--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
   <crowd-form>
     <input name="utterance" id="utterance" type="hidden">
     <input name="annotations" id="annotations" type="hidden">
+    <input name="utterances" id="utterances" type="hidden">
 
     <!-- Prevent crowd-form from creating its own button -->
     <crowd-button form-action="submit" style="display: none;"></crowd-button>
