--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 
   <div id="root" data-id="123" data-context="A doctor appointment"
     data-intents="Delete something on your calendar | Inquire on the duration to travel to somewhere" data-icons="calendar | map"
-    data-instructions="Do somthing" data-link-word="if" data-max-length-per-intent="60"></div>
+    data-instructions="Do somthing" data-link-word="if" data-quantifier="all" data-max-length-per-intent="60"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
