--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
   </crowd-form>
 
   <div id="root" data-id="123" data-context="A doctor appointment"
-    data-intents="Delete something on your calendar | Inquire on the duration to travel to somewhere" data-icons="calendar | map"
+    data-intents="Delete something on your calendar | Inquire on the duration to travel to somewhere | Do something | Do something else" data-icons="calendar | map"
     data-instructions="Do somthing" data-link-words="if | because | provided" data-link-word-idx="1" data-quantifiers="all | not even one" data-quantifier-idx="0" 
     data-max-length-per-intent="60" data-strategy="batch" data-min-intents="2"></div>
   <!--
