--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <!-- Required meta tags -->
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -22,9 +23,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
   <title>React App</title>
 
   <script src="https://assets.crowd.aws/crowd-html-elements.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
 </head>
 
@@ -33,18 +36,21 @@
 
   <crowd-form>
     <input name="utterance" id="utterance" type="hidden">
+    <input name="context" id="context" type="hidden">
     <input name="intents" id="intents" type="hidden">
-    <input name="annotations" id="annotations" type="hidden">
-    <input name="utterances" id="utterances" type="hidden">
+    <input name="constraints" id="constraints" type="hidden">
+    <input name="intents-annotations" id="intents-annotations" type="hidden">
+    <input name="constraints-annotations" id="constraints-annotations" type="hidden">
 
     <!-- Prevent crowd-form from creating its own button -->
     <crowd-button form-action="submit" style="display: none;"></crowd-button>
   </crowd-form>
 
-  <div id="root" data-id="123" data-context="A doctor appointment"
-    data-intents="Delete something on your calendar | Inquire on the duration to travel to somewhere | Do something | Do something else" data-icons="calendar | map"
+  <div id="root" data-id="123" data-context="A doctor appointment" data-contexts="A doctor appointment | party | school | office"
+    data-intents="Delete something on your calendar |  Send a text message to anyone on your contact list | Create a reminder" data-icons="calendar | chat | bell" data-min-intents="2"
+    data-constraint-intents="Inquire on the duration of driving to somewhere | Check weather conditions | Check your text messages" data-constraint-icons="map | sun | chat" data-min-constraints="1"
     data-instructions="Do somthing" data-link-words="if | because | provided" data-link-word-idx="1" data-quantifiers="all | not even one" data-quantifier-idx="0" 
-    data-max-length-per-intent="60" data-strategy="batch" data-min-intents="2"></div>
+    data-max-length-per-intent="60" data-strategy="batch"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
