--- a/public/index.html
+++ b/public/index.html
@@ -47,9 +47,9 @@
   </crowd-form>
 
   <div id="root" data-id="123" data-context="A doctor appointment" data-contexts="A doctor appointment | party | school | office"
-    data-intents="Delete something on your calendar |  Send a text message to anyone on your contact list | Create a reminder" data-icons="calendar | chat | bell" data-min-intents="2"
-    data-constraint-intents="Inquire on the duration of driving to somewhere | Check weather conditions | Check your text messages" data-constraint-icons="map | sun | chat" data-min-constraints="1"
-    data-instructions="Do somthing" data-link-words="if | because | provided" data-link-word-idx="1" data-quantifiers="all | not even one" data-quantifier-idx="0" 
+    data-intents="Delete something on your calendar |  Send a text message to anyone on your contact list | Create a reminder" data-intent-icons="calendar | chat | bell" data-min-intents="2"
+    data-constraints="Inquire on the duration of driving to somewhere | Check weather conditions | Check your text messages" data-constraint-icons="map | sun | chat" data-min-constraints="1"
+    data-instructions="Do somthing" data-link-words="if | because | provided"  data-quantifiers="all | not even one" 
     data-max-length-per-intent="60" data-strategy="batch"></div>
   <!--
       This HTML file is a template.
