Fix bugs and build

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
 
   <div id="root" data-id="123"
     data-intents="Set an alarm every two minutes over the next half hour | What does Traffic look like near DIA? | set an alarm for the next hour" data-intent-icons="alarm | truck | alarm" data-min-intents="2"
-    data-instructions="Do somthing" data-conjunction-words="if:if | unless:unless | providing / provided (that):provided,provided that"  min-conjunction-words="1"
+    data-instructions="Do somthing" data-conjunction-words="if:if | as / so long as:as long as,so long as | providing / provided (that):provided,provided that"  min-conjunction-words="1"
     data-max-length-per-intent="60" data-strategy="batch"></div>
   <!--
       This HTML file is a template.
