--- a/public/index3.html
+++ b/public/index3.html
@@ -44,7 +44,11 @@
     <crowd-button form-action="submit" style="display: none;"></crowd-button>
   </crowd-form>
 
-  <div id="root" data-id="123" data-max-utterances="3" data-max-length="250" data-strategy="batch"></div>
+  <div id="root" data-id="123"
+    data-intents="Set an alarm every two minutes over the next half hour | What does Traffic look like near DIA? | set an alarm for the next hour"
+    data-intent-icons="alarm | truck | alarm" data-min-intents="3" data-instructions="Do somthing"
+    data-conjunction-words="if:if | as / so long as:as long as,so long as | providing / provided (that):provided,provided that"
+    min-conjunction-words="1" data-max-length-per-intent="60" data-strategy="batch"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
