--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
   </crowd-form>
 
   <div id="root" data-id="123" data-utterance="If it rains tomorrow then remind me to bring a jacket"
-    data-max-length="250" data-blacklist="${x}"></div>
+    data-max-length="250" data-blacklist="if:then"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
