--- a/public/index.html
+++ b/public/index.html
@@ -44,8 +44,7 @@
     <crowd-button form-action="submit" style="display: none;"></crowd-button>
   </crowd-form>
 
-  <div id="root" data-id="123" data-utterance="If it rains tomorrow then remind me to bring a jacket"
-    data-max-length="250" data-blacklist="if:then"></div>
+  <div id="root" data-id="123" data-max-length="250" data-test-variation="control"></div>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
