--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
             data-max-length="250"
             data-excluded-terms="if|then|weather|not so much"
             data-excluded-apps="weather"
-            data-required-flows-in-utterance="condition"
+            data-required-flows-in-utterance="condition|repetition"
         ></div>
         <!--
       This HTML file is a template.
