--- a/public/index.html
+++ b/public/index.html
@@ -57,9 +57,9 @@
             id="root"
             data-id="123"
             data-max-length="250"
-            data-excluded-terms="if|then|weather|not so much"
+            data-excluded-terms="and|if|or|then|weather|not so much"
             data-excluded-apps="weather"
-            data-required-flows-in-utterance="condition|repetition"
+            data-flows="condition|multiplicity"
         ></div>
         <!--
       This HTML file is a template.
