--- a/public/index.html
+++ b/public/index.html
@@ -48,9 +48,10 @@
             id="root"
             data-id="123"
             data-max-length="250"
-            data-excluded-terms="after|as|once|when|while|whenever|wherever"
             data-excluded-apps="weather"
             data-flows="sequence|condition|multiplicity"
+            data-rephrase-utterances="Remind me to bring a jacket|||Check the weather tomorrow|||What's the traffic on I40?"
+            data-mode="rewrite-simple-complex"
         ></div>
         <!--
       This HTML file is a template.
