--- a/public/index.html
+++ b/public/index.html
@@ -47,9 +47,9 @@
         <div
             id="root"
             data-id="123"
-            data-max-length="250"
-            data-excluded-apps="weather"
+            data-max-length="180"
             data-flows="sequence|condition|multiplicity"
+            data-excluded-apps="reminders"
             data-rephrase-utterances="Remind me to bring a jacket|||Check the weather tomorrow|||What's the traffic on I40?"
             data-mode="rewrite-simple-complex"
         ></div>
