--- a/public/index.html
+++ b/public/index.html
@@ -48,10 +48,9 @@
             id="root"
             data-id="123"
             data-max-length="180"
-            data-flows="sequence|condition|multiplicity"
             data-excluded-apps="reminders"
             data-rephrase-utterances="Remind me to bring a jacket|||Check the weather tomorrow|||What's the traffic on I40?"
-            data-mode="rewrite-simple-complex"
+            data-mode="rewrite-complex-different-apps"
         ></div>
         <!--
       This HTML file is a template.
